--- a/PrintTreeFromTopToBottom/PrintTreeFromTopToBottom.vcxproj
+++ b/PrintTreeFromTopToBottom/PrintTreeFromTopToBottom.vcxproj
@@ -95,6 +95,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="PrintTreeFromTopToBottom.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
